--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.1",
     "@types/uuid": "^8.3.4",
+    "@types/video.js": "^7.3.36",
+    "@videojs/themes": "^1.0.1",
     "ngx-mask": "^13.1.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
+    "video.js": "^7.18.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -31,7 +36,7 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.50",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
